@@ -3,5 +3,6 @@ libyahoo2: library for Yahoo! Messenger new protocol
 Philip S Tellis		<philip . tellis AT gmx . net>		Maintainer
 Steve McAndrewSmith	<steve AT finalge . org>		Code cleanups
 Mik Sun                 <miksun AT users . sourceforge . net>   Webcam Support
+Wayne Parrot            <wayne_p AT pacific . net . au>         Yahoo Chat
 
 libyahoo2 is derivative of gaim: http://gaim.sourceforge.net/
