@@ -1,3 +1,11 @@
+* 18-Mar-2003
+
+Mik Sun has added Webcam support, and Wayne Parrot has started on Yahoo
+Chat support.  Things are starting to move.
+
+Welcome to these two new members of the team.
+
+
 * 19-Feb-2003
 
 Released 0.6.3 - no real changes from 11th Feb.
